# sovereign-os

./: .gitattributes  .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CODEOWNERS  Cargo.toml  LICENSE  Makefile  README.md  context.md  requirements-dev.txt  rust-toolchain.toml
.github/workflows/: mdbook-build.yml  mdbook-publish.yml  release.yml  test.yml
.mcp/: config.template.json
assets/operator-memory/: MEMORY.md  ask-questions-when-unclear.md  clarify-dont-compensate.md  commit-message-no-backticks.md  do-not-minimize.md  drive-the-direction-with-momentum.md  first-image-build-status.md  mid-work-messages-are-interrupts.md  no-random-side-quests.md  operator-is-always-the-driver.md  operator-words-are-sacrosanct.md  single-os-pivot.md  test-before-handover.md
backlog/: INDEX.md  SHIPPED-ROLLUP.md  SHIPPED.md
backlog/epics/: INDEX.md
backlog/features/: INDEX.md
backlog/milestones/: INDEX.md  M002-control-word-injected-logic.md  M003-hardware-topology-pcie-discipline.md  M004-oracle-scout-vector-arbiter-roles.md  M005-agent-runtime-four-planes.md  M006-deterministic-ai-control-substrate.md  M007-execution-model-branch-primitive-scheduler.md  (+78 more)
cockpit-wasm/: Cargo.toml  build.sh  gen-bridges.py
cockpit-wasm/src/: bridges.rs  lib.rs
cockpit-wasm/src/bespoke/: aspect_ratio_box.rs  auto_link.rs  callout_arrow.rs  color_contrast.rs  day_divider.rs  delta_pill.rs  friction_audit_panel.rs  guardian_panel.rs  mod.rs  pagination.rs  perimeter_panel.rs  relative_time.rs  scheduler_panel.rs  search_highlight.rs  search_history.rs  shortcut_cheatsheet.rs  text_truncation.rs  toast_stack.rs  views.rs  word_count.rs
cockpit-wasm/src/compute/: alert_group.rs  alert_tile_board.rs  autocomplete_list.rs  byte_size_formatter.rs  checkbox_tree.rs  checklist.rs  collapsible_section.rs  cost_meter.rs  facet_counts.rs  filter_state.rs  keystroke_map.rs  mod.rs  multi_select_list.rs  progress_tracker.rs  radio_group.rs  search_filter.rs  segmented_control.rs  stat_trend.rs  status_aggregator.rs  stepper.rs  tab_strip.rs  tree_view.rs
config/: compatibility.yaml  control-systems.yaml  cost-policy.toml.example  dashboard-auth.toml.example  dashboard-catalog.yaml  dashboard-routes.yaml  feature-coverage.yaml  gpu-policy.toml.example  install-layers.toml.example  integrations.yaml  kernel-tuning.toml.example  known-boards.toml.example  lifecycle-profiles.toml.example  notify.env.example  notify.toml.example  notifykit.toml.example  nvidia-mps.yaml.example  oc-headroom.toml.example  operator-deps.toml.example  panel-api-routes.yaml  permission-modes.yaml  power-profiles.toml.example  power.toml.example  psu-oc.toml.example  ram.toml.example  research-loop.toml.example  science-tools.yaml  shutdown-manifest.toml.example  super-model-manifest.toml  warp-catalog.yaml  wikis.toml.example  workflow-profiles.toml.example
crates/sovereign-agent-loop/: Cargo.toml
crates/sovereign-agent-loop/src/: lib.rs
crates/sovereign-agent-runtime/: Cargo.toml
crates/sovereign-agent-runtime/src/: lib.rs  main.rs
crates/sovereign-agent-runtime/tests/: run.rs
crates/sovereign-aho-corasick/: Cargo.toml
crates/sovereign-aho-corasick/src/: lib.rs
crates/sovereign-aimd-limiter/: Cargo.toml
crates/sovereign-aimd-limiter/src/: lib.rs
crates/sovereign-alias-sampler/: Cargo.toml
crates/sovereign-alias-sampler/src/: lib.rs
crates/sovereign-answer-extract/: Cargo.toml
crates/sovereign-answer-extract/src/: lib.rs
crates/sovereign-arg-schema/: Cargo.toml
crates/sovereign-arg-schema/src/: lib.rs
crates/sovereign-attention/: Cargo.toml
crates/sovereign-attention/src/: lib.rs
crates/sovereign-balanced-constrain/: Cargo.toml
crates/sovereign-balanced-constrain/src/: lib.rs
crates/sovereign-bandit/: Cargo.toml
crates/sovereign-bandit/src/: lib.rs
crates/sovereign-base-os/: Cargo.toml
crates/sovereign-base-os/src/: lib.rs  main.rs
crates/sovereign-beam-search/: Cargo.toml
crates/sovereign-beam-search/src/: lib.rs
crates/sovereign-best-of-n/: Cargo.toml
crates/sovereign-best-of-n/src/: lib.rs
crates/sovereign-bin-packing/: Cargo.toml
crates/sovereign-bin-packing/src/: lib.rs
crates/sovereign-binary-quant/: Cargo.toml
crates/sovereign-binary-quant/src/: lib.rs
crates/sovereign-bit-cheats/: Cargo.toml
crates/sovereign-bit-cheats/src/: lib.rs
crates/sovereign-bitlinear-core/: Cargo.toml
crates/sovereign-bitlinear-core/src/: lib.rs  linear.rs  mlp.rs  pack.rs  reference.rs  swiglu.rs  ternary.rs  validate.rs
crates/sovereign-bitops/: Cargo.toml
crates/sovereign-bitops/src/: lib.rs
crates/sovereign-bktree/: Cargo.toml
crates/sovereign-bktree/src/: lib.rs
crates/sovereign-bloom/: Cargo.toml
crates/sovereign-bloom/src/: lib.rs
crates/sovereign-bm25/: Cargo.toml
crates/sovereign-bm25/src/: lib.rs
crates/sovereign-bounded-block/: Cargo.toml
crates/sovereign-bounded-block/src/: lib.rs
crates/sovereign-bpe-train/: Cargo.toml
crates/sovereign-bpe-train/src/: lib.rs
crates/sovereign-branch-scheduler/: Cargo.toml
crates/sovereign-branch-scheduler/src/: lib.rs
crates/sovereign-branch-tree/: Cargo.toml
crates/sovereign-branch-tree/src/: lib.rs
crates/sovereign-calc/: Cargo.toml
crates/sovereign-calc/src/: lib.rs
crates/sovereign-cfg-grammar/: Cargo.toml
crates/sovereign-cfg-grammar/src/: lib.rs
crates/sovereign-cgroup-systemd/: Cargo.toml
crates/sovereign-cgroup-systemd/src/: lib.rs  main.rs
docs/: MASTER-PLAN.md  book.toml  decisions.md  release.md
models/: catalog.yaml
profiles/: INDEX.md  developer.yaml  headless.yaml  minimal.yaml  old-workstation.yaml  sain-01.yaml
proto/: weaver_state.proto
schemas/: compatibility.schema.yaml  mixin.schema.yaml  model-catalog.schema.yaml  orchestration-profile.schema.yaml  profile.schema.yaml  runtime-profile.schema.yaml  science-tools.schema.yaml  warp-catalog.schema.yaml  whitelabel.schema.yaml
scripts/: onboard.sh  setup.sh  sovereign-osctl  validate-profiles.sh
tests/: README.md
tools/: profile_merger.py  wikiops.py
whitelabel/: INDEX.md  default.yaml
(+3642 files in other folders)
