[workspace]
resolver = "2"
members = ["crates/*"]
# cockpit-wasm is the browser bridge for the sovereign-cockpit-* crates (audit
# F-2026-001). It is DELIBERATELY excluded: it needs wasm-bindgen's generated
# `unsafe` glue, and sovereign-simd is the workspace's ONE sanctioned unsafe
# crate. Keeping it out of the workspace preserves that operator decision and
# keeps the wasm/browser toolchain off the 714-crate CI path (F-2026-050).
exclude = ["cockpit-wasm"]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.89"
license = "AGPL-3.0-or-later"
repository = "https://github.com/cyberpunk042/sovereign-os"
authors = ["cyberpunk042"]
publish = false

[workspace.dependencies]
# numeric primitives
half = "2"
# errors
thiserror = "2"
anyhow = "1"
# serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# rand for stochastic rounding
rand = "0.9"
rand_chacha = "0.9"

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[workspace.lints.clippy]
# tests prefer "build object then mutate" pattern for readability
field_reassign_with_default = "allow"
# loop-index style is fine when the loop also reads other slices
needless_range_loop = "allow"
# Rust 1.89 (the AVX-512 floor) extended `collapsible_if` to fold `if cond { if let
# … }` into let-chains. The pre-1.89 codebase predates that style; allow it rather
# than churn many crates. Revisit if the codebase is swept to let-chains later.
collapsible_if = "allow"
