[package]
name = "sovereign-agent-runtime"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish.workspace = true
description = "Bridges the real LLM runtime into the agent loop: an LlmResponder that drives sovereign-agent-loop with sovereign-llm, so a tool-using ReAct agent runs on the actual quantized inference engine instead of a scripted responder. The wiring that turns the inference stack and the agentic layer into one running agent. Composes sovereign-agent-loop and sovereign-llm."

[lints]
workspace = true

[[bin]]
name = "sovereign-agent-runtime"
path = "src/main.rs"

[dependencies]
sovereign-agent-loop = { path = "../sovereign-agent-loop" }
sovereign-llm = { path = "../sovereign-llm" }
sovereign-stop-sequence = { path = "../sovereign-stop-sequence" }
# Used by the demo binary to build a small SovereignLlm, and by the tests.
sovereign-tokenizer = { path = "../sovereign-tokenizer" }
sovereign-transformer-block = { path = "../sovereign-transformer-block" }
sovereign-rmsnorm = { path = "../sovereign-rmsnorm" }
sovereign-ffn = { path = "../sovereign-ffn" }
sovereign-sampler = { path = "../sovereign-sampler" }
sovereign-decoder-stack = { path = "../sovereign-decoder-stack" }
sovereign-tool-dispatch = { path = "../sovereign-tool-dispatch" }
