[package]
name = "sovereign-bm25"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish.workspace = true
description = "BM25 (Okapi) lexical ranking: scores documents for a query with inverse-document-frequency weighting, saturating term frequency (k1), and document-length normalization (b) — the standard probabilistic retrieval function. A stronger ranker than raw term overlap for grounding retrieval."

[lints]
workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
