[package]
name = "sovereign-branch-tree"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish.workspace = true
description = "M007 branch primitive — the fork/join execution unit of the deterministic runtime: a branch tree you fork, commit, or prune (cascading to descendants), with lineage + active-set queries. The structure the value plane scores and the control word annotates."

[lints]
workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
