[package]
name = "sovereign-cgroup-systemd"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish.workspace = true
description = "M045 cgroup v2 + systemd lifecycle surface per E0428 + M00747-M00750 dump 13564-13594. 8 OS primitives + cgroup v2 resource control + systemd service-boundaries-slices-scopes lifecycle. The 'peace-machine substrate' per dump 13594 verbatim."

[lints]
workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[features]
default = []
